Se agrego mejoras y validaciones a los endPoints incluyendo sus servicios/repositories y DTO