@@ -10,6 +10,7 @@ import com.example.backend_tallerautomotriz.dto.response.OrdenTrabajoResponseDTO
 import com.example.backend_tallerautomotriz.entity.*;
 import com.example.backend_tallerautomotriz.enums.EstadoOrden;
 import com.example.backend_tallerautomotriz.enums.EstadoPago;
+import com.example.backend_tallerautomotriz.enums.EstadoServicio;
 import com.example.backend_tallerautomotriz.enums.TipoOrden;
 import com.example.backend_tallerautomotriz.exception.BusinessRuleException;
 import com.example.backend_tallerautomotriz.exception.EntityNotFoundException;
@@ -21,9 +22,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -41,282 +42,367 @@ public class OrdenTrabajoServiceImpl implements OrdenTrabajoService {
     private final SucursalRepository sucursalRepo;
     private final NotificacionService notificacionService;
 
-    private static final Map<EstadoOrden, List<EstadoOrden>> TRANSICIONES = Map.of(
-            EstadoOrden.PENDIENTE,              List.of(EstadoOrden.PENDIENTE_APROBACION, EstadoOrden.EN_PROGRESO, EstadoOrden.CANCELADA),
-            EstadoOrden.PENDIENTE_APROBACION,   List.of(EstadoOrden.EN_PROGRESO, EstadoOrden.PENDIENTE, EstadoOrden.CANCELADA),
-            EstadoOrden.EN_PROGRESO,            List.of(EstadoOrden.COMPLETADA, EstadoOrden.CANCELADA),
-            EstadoOrden.COMPLETADA,             List.of(),
-            EstadoOrden.CANCELADA,              List.of()
-    );
-
     @Override
     @Transactional
-    public OrdenTrabajoResponseDTO crear(OrdenTrabajoRequestDTO req) {
-        Cliente cliente = clienteRepo.findById(req.getClienteId())
-                .orElseThrow(() -> new EntityNotFoundException("Cliente no encontrado: " + req.getClienteId()));
-        Vehiculo vehiculo = vehiculoRepo.findById(req.getPatente())
-                .orElseThrow(() -> new EntityNotFoundException("Vehículo no encontrado: " + req.getPatente()));
-
-        Mecanico mecanico = null;
-        if (req.getMecanicoId() != null)
-            mecanico = mecanicoRepo.findById(req.getMecanicoId())
-                    .orElseThrow(() -> new EntityNotFoundException("Mecánico no encontrado"));
-
-        Sucursal sucursal = null;
-        if (req.getSucursalId() != null)
-            sucursal = sucursalRepo.findById(req.getSucursalId())
-                    .orElseThrow(() -> new EntityNotFoundException("Sucursal no encontrada"));
-        else if (mecanico != null)
-            sucursal = mecanico.getSucursal();
-
-        // Verificar stock antes de comprometer la orden
-        final Sucursal sucursalFinal = sucursal;
-        if (req.getRepuestos() != null && sucursalFinal != null) {
-            for (OrdenRepuestoRequestDTO r : req.getRepuestos()) {
-                Inventario inv = inventarioRepo
-                        .findBySucursalIdAndRepuestoId(sucursalFinal.getId(), r.getRepuestoId())
-                        .orElseThrow(() -> new EntityNotFoundException("Repuesto sin inventario en esta sucursal: " + r.getRepuestoId()));
-                if (inv.getStockTotal() < r.getCantidad())
-                    throw new StockInsuficienteException("Stock insuficiente para repuesto id: " + r.getRepuestoId());
-            }
+    public OrdenTrabajoResponseDTO crear(OrdenTrabajoRequestDTO request) {
+        validarElementosUnicos(request);
+        Cliente cliente = clienteRepo.findById(request.getClienteId())
+                .orElseThrow(() -> new EntityNotFoundException("Cliente no encontrado: " + request.getClienteId()));
+        Vehiculo vehiculo = vehiculoRepo.findById(request.getPatente().trim())
+                .orElseThrow(() -> new EntityNotFoundException("Vehiculo no encontrado: " + request.getPatente()));
+        if (!vehiculo.getCliente().getId().equals(cliente.getId())) {
+            throw new BusinessRuleException("El vehiculo no pertenece al cliente seleccionado");
         }
 
+        Mecanico mecanico = buscarMecanico(request.getMecanicoId());
+        Sucursal sucursal = resolverSucursal(request.getSucursalId(), mecanico);
         OrdenTrabajo orden = new OrdenTrabajo();
         orden.setVehiculo(vehiculo);
         orden.setCliente(cliente);
         orden.setMecanico(mecanico);
-        orden.setSucursal(sucursalFinal);
-        orden.setTipoOrden(TipoOrden.valueOf(req.getTipoOrden().toUpperCase()));
+        orden.setSucursal(sucursal);
+        orden.setTipoOrden(request.getTipoOrden());
         orden.setEstado(EstadoOrden.PENDIENTE);
         orden.setFechaCreacion(LocalDate.now());
-        orden.setComentarios(req.getComentarios());
+        orden.setComentarios(normalizarOpcional(request.getComentarios()));
         orden = ordenRepo.save(orden);
 
-        if (req.getServicios() != null) {
-            for (OrdenServicioRequestDTO s : req.getServicios()) {
-                Servicio servicio = servicioRepo.findById(s.getServicioId())
-                        .orElseThrow(() -> new EntityNotFoundException("Servicio no encontrado: " + s.getServicioId()));
-                OrdenServicio os = new OrdenServicio(
-                        new OrdenServicioId(orden.getId(), s.getServicioId()), orden, servicio, s.getPrecioAplicado());
-                orden.getServicios().add(os);
-            }
-        }
-
-        if (req.getRepuestos() != null) {
-            for (OrdenRepuestoRequestDTO r : req.getRepuestos()) {
-                Repuesto repuesto = repuestoRepo.findById(r.getRepuestoId())
-                        .orElseThrow(() -> new EntityNotFoundException("Repuesto no encontrado: " + r.getRepuestoId()));
-                OrdenRepuesto or2 = new OrdenRepuesto(
-                        new OrdenRepuestoId(orden.getId(), r.getRepuestoId()),
-                        orden, repuesto, r.getCantidad(), r.getPrecioAplicado());
-                orden.getRepuestos().add(or2);
-                if (sucursalFinal != null) {
-                    inventarioRepo.findBySucursalIdAndRepuestoId(sucursalFinal.getId(), r.getRepuestoId())
-                            .ifPresent(inv -> {
-                                inv.setStockTotal(inv.getStockTotal() - r.getCantidad());
-                                inventarioRepo.save(inv);
-                            });
-                }
-            }
-        }
-
+        agregarServicios(orden, request.getServicios());
+        agregarRepuestos(orden, sucursal, request.getRepuestos());
         return toDTO(ordenRepo.save(orden));
     }
 
     @Override
-    public OrdenTrabajoResponseDTO obtenerPorId(Integer id) { return toDTO(buscar(id)); }
+    @Transactional(readOnly = true)
+    public OrdenTrabajoResponseDTO obtenerPorId(Integer id) {
+        return toDTO(buscar(id));
+    }
 
     @Override
+    @Transactional(readOnly = true)
     public List<OrdenTrabajoResponseDTO> listarTodos() {
-        return ordenRepo.findAll().stream().map(this::toDTO).collect(Collectors.toList());
+        return ordenRepo.findAll().stream().map(this::toDTO).toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<OrdenTrabajoResponseDTO> listarPorCliente(Integer clienteId) {
-        return ordenRepo.findByClienteId(clienteId).stream().map(this::toDTO).collect(Collectors.toList());
+        validarClienteExiste(clienteId);
+        return ordenRepo.findByClienteIdOrderByFechaCreacionDesc(clienteId).stream().map(this::toDTO).toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<OrdenTrabajoResponseDTO> listarPorMecanico(Integer mecanicoId) {
-        return ordenRepo.findByMecanicoId(mecanicoId).stream().map(this::toDTO).collect(Collectors.toList());
+        validarMecanicoExiste(mecanicoId);
+        return ordenRepo.findByMecanicoIdOrderByFechaCreacionDesc(mecanicoId).stream().map(this::toDTO).toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<OrdenTrabajoResponseDTO> listarPorVehiculo(String patente) {
-        return ordenRepo.findByVehiculoPatente(patente).stream().map(this::toDTO).collect(Collectors.toList());
+        if (!vehiculoRepo.existsById(patente)) {
+            throw new EntityNotFoundException("Vehiculo no encontrado: " + patente);
+        }
+        return ordenRepo.findByVehiculoPatenteOrderByFechaCreacionDesc(patente).stream().map(this::toDTO).toList();
     }
 
     @Override
     @Transactional
-    public OrdenTrabajoResponseDTO cambiarEstado(Integer id, EstadoOrden nuevoEstado) {
-        OrdenTrabajo orden = buscar(id);
-        List<EstadoOrden> permitidos = TRANSICIONES.get(orden.getEstado());
-        if (!permitidos.contains(nuevoEstado))
-            throw new BusinessRuleException("Transición inválida: " + orden.getEstado() + " → " + nuevoEstado);
-        orden.setEstado(nuevoEstado);
+    public OrdenTrabajoResponseDTO cambiarEstado(Integer id, EstadoOrden estado) {
+        if (estado != EstadoOrden.CANCELADA) {
+            throw new BusinessRuleException("Use el endpoint especifico para cambiar a " + estado);
+        }
+        OrdenTrabajo orden = buscarParaActualizar(id);
+        cancelarOrden(orden);
         return toDTO(ordenRepo.save(orden));
     }
 
     @Override
     @Transactional
-    public OrdenTrabajoResponseDTO enviarPresupuesto(Integer ordenId, PresupuestoRequestDTO req) {
-        OrdenTrabajo orden = buscar(ordenId);
-        if (orden.getEstado() != EstadoOrden.PENDIENTE)
-            throw new BusinessRuleException("Solo se puede enviar presupuesto a órdenes en estado PENDIENTE");
+    public OrdenTrabajoResponseDTO enviarPresupuesto(Integer ordenId, PresupuestoRequestDTO request) {
+        OrdenTrabajo orden = buscarParaActualizar(ordenId);
+        if (orden.getEstado() != EstadoOrden.PENDIENTE) {
+            throw new BusinessRuleException("Solo se puede enviar presupuesto a ordenes pendientes");
+        }
+        if (orden.getMecanico() == null) {
+            throw new BusinessRuleException("La orden debe tener un mecanico asignado");
+        }
 
-        orden.setPresupuestoTotal(req.getPresupuestoTotal());
-        if (req.getFechaFinalizacionEstimada() != null)
-            orden.setFechaFinalizacionEstimada(req.getFechaFinalizacionEstimada());
-        if (req.getComentarios() != null)
-            orden.setComentarios(req.getComentarios());
+        orden.setPresupuestoTotal(request.getPresupuestoTotal().setScale(2, RoundingMode.HALF_UP));
+        orden.setFechaFinalizacionEstimada(request.getFechaFinalizacionEstimada());
+        if (request.getComentarios() != null) {
+            orden.setComentarios(request.getComentarios().trim());
+        }
         orden.setEstado(EstadoOrden.PENDIENTE_APROBACION);
-        ordenRepo.save(orden);
-
-        // Notificar al cliente
-        Integer usuarioClienteId = orden.getCliente().getUsuario().getId();
-        notificacionService.crear(
-                usuarioClienteId,
-                "Tu mecánico envió un presupuesto de $" + req.getPresupuestoTotal() +
-                        " para la orden #" + ordenId + ". Por favor, revísalo y aprueba o rechaza.",
+        OrdenTrabajo guardada = ordenRepo.save(orden);
+        notificar(
+                orden.getCliente().getUsuario().getId(),
+                "Se envio un presupuesto para la orden #" + ordenId + " por $" + orden.getPresupuestoTotal(),
                 "PRESUPUESTO",
-                ordenId
-        );
-
-        return toDTO(orden);
+                ordenId);
+        return toDTO(guardada);
     }
 
     @Override
     @Transactional
     public OrdenTrabajoResponseDTO aprobarPresupuesto(Integer ordenId) {
-        OrdenTrabajo orden = buscar(ordenId);
-        if (orden.getEstado() != EstadoOrden.PENDIENTE_APROBACION)
-            throw new BusinessRuleException("La orden no está esperando aprobación de presupuesto");
-
+        OrdenTrabajo orden = buscarParaActualizar(ordenId);
+        validarPendienteAprobacion(orden);
         orden.setEstado(EstadoOrden.EN_PROGRESO);
-        ordenRepo.save(orden);
-
-        if (orden.getMecanico() != null) {
-            notificacionService.crear(
-                    orden.getMecanico().getUsuario().getId(),
-                    "El cliente aprobó el presupuesto de la orden #" + ordenId + ". ¡Puedes comenzar el trabajo!",
-                    "PRESUPUESTO_APROBADO",
-                    ordenId
-            );
-        }
-
-        return toDTO(orden);
+        OrdenTrabajo guardada = ordenRepo.save(orden);
+        notificarMecanico(orden, "El cliente aprobo el presupuesto de la orden #" + ordenId, "PRESUPUESTO_APROBADO");
+        return toDTO(guardada);
     }
 
     @Override
     @Transactional
     public OrdenTrabajoResponseDTO rechazarPresupuesto(Integer ordenId) {
-        OrdenTrabajo orden = buscar(ordenId);
-        if (orden.getEstado() != EstadoOrden.PENDIENTE_APROBACION)
-            throw new BusinessRuleException("La orden no está esperando aprobación de presupuesto");
-
+        OrdenTrabajo orden = buscarParaActualizar(ordenId);
+        validarPendienteAprobacion(orden);
         orden.setEstado(EstadoOrden.PENDIENTE);
-        ordenRepo.save(orden);
-
-        // Notificar al mecánico
-        if (orden.getMecanico() != null) {
-            notificacionService.crear(
-                    orden.getMecanico().getUsuario().getId(),
-                    "El cliente rechazó el presupuesto de la orden #" + ordenId + ". Por favor, negocia un nuevo monto.",
-                    "PRESUPUESTO_RECHAZADO",
-                    ordenId
-            );
-        }
-
-        return toDTO(orden);
+        OrdenTrabajo guardada = ordenRepo.save(orden);
+        notificarMecanico(orden, "El cliente rechazo el presupuesto de la orden #" + ordenId, "PRESUPUESTO_RECHAZADO");
+        return toDTO(guardada);
     }
 
     @Override
     @Transactional
     public OrdenTrabajoResponseDTO marcarCompletada(Integer ordenId) {
-        OrdenTrabajo orden = buscar(ordenId);
-        if (orden.getEstado() != EstadoOrden.EN_PROGRESO)
-            throw new BusinessRuleException("Solo se pueden completar órdenes EN_PROGRESO");
-
+        OrdenTrabajo orden = buscarParaActualizar(ordenId);
+        if (orden.getEstado() != EstadoOrden.EN_PROGRESO) {
+            throw new BusinessRuleException("Solo se pueden completar ordenes en progreso");
+        }
         orden.setEstado(EstadoOrden.COMPLETADA);
         generarFactura(orden);
-        ordenRepo.save(orden);
-
-        // Notificar al cliente
-        notificacionService.crear(
+        OrdenTrabajo guardada = ordenRepo.save(orden);
+        notificar(
                 orden.getCliente().getUsuario().getId(),
-                "¡Tu vehículo está listo! La orden #" + ordenId + " ha sido completada. Puedes proceder al pago.",
+                "Tu vehiculo esta listo. La orden #" + ordenId + " fue completada",
                 "ORDEN_LISTA",
-                ordenId
-        );
-
-        return toDTO(orden);
+                ordenId);
+        return toDTO(guardada);
     }
 
     @Override
     @Transactional
     public void cancelar(Integer id) {
-        OrdenTrabajo orden = buscar(id);
-        List<EstadoOrden> permitidos = TRANSICIONES.get(orden.getEstado());
-        if (!permitidos.contains(EstadoOrden.CANCELADA))
-            throw new BusinessRuleException("No se puede cancelar una orden en estado: " + orden.getEstado());
-        orden.setEstado(EstadoOrden.CANCELADA);
+        OrdenTrabajo orden = buscarParaActualizar(id);
+        cancelarOrden(orden);
         ordenRepo.save(orden);
     }
 
-    // ── helpers ──────────────────────────────────────────────────────────────
+    private Sucursal resolverSucursal(Integer sucursalId, Mecanico mecanico) {
+        if (mecanico != null) {
+            if (sucursalId != null && !mecanico.getSucursal().getId().equals(sucursalId)) {
+                throw new BusinessRuleException("El mecanico no pertenece a la sucursal seleccionada");
+            }
+            return mecanico.getSucursal();
+        }
+        if (sucursalId == null) {
+            throw new BusinessRuleException("Debe seleccionar una sucursal");
+        }
+        return sucursalRepo.findById(sucursalId)
+                .orElseThrow(() -> new EntityNotFoundException("Sucursal no encontrada: " + sucursalId));
+    }
+
+    private void validarElementosUnicos(OrdenTrabajoRequestDTO request) {
+        Set<Integer> servicios = new HashSet<>();
+        for (OrdenServicioRequestDTO servicio : request.getServicios()) {
+            if (!servicios.add(servicio.getServicioId())) {
+                throw new BusinessRuleException("No se permiten servicios duplicados en una orden");
+            }
+        }
+        Set<Integer> repuestos = new HashSet<>();
+        if (request.getRepuestos() != null) {
+            for (OrdenRepuestoRequestDTO repuesto : request.getRepuestos()) {
+                if (!repuestos.add(repuesto.getRepuestoId())) {
+                    throw new BusinessRuleException("No se permiten repuestos duplicados en una orden");
+                }
+            }
+        }
+    }
+
+    private Mecanico buscarMecanico(Integer mecanicoId) {
+        if (mecanicoId == null) {
+            return null;
+        }
+        return mecanicoRepo.findById(mecanicoId)
+                .orElseThrow(() -> new EntityNotFoundException("Mecanico no encontrado: " + mecanicoId));
+    }
+
+    private void agregarServicios(OrdenTrabajo orden, List<OrdenServicioRequestDTO> solicitudes) {
+        for (OrdenServicioRequestDTO solicitud : solicitudes) {
+            Servicio servicio = servicioRepo.findById(solicitud.getServicioId())
+                    .orElseThrow(() -> new EntityNotFoundException("Servicio no encontrado: " + solicitud.getServicioId()));
+            if (servicio.getEstado() != EstadoServicio.ACTIVO) {
+                throw new BusinessRuleException("El servicio no esta activo: " + servicio.getId());
+            }
+            orden.getServicios().add(new OrdenServicio(
+                    new OrdenServicioId(orden.getId(), servicio.getId()),
+                    orden,
+                    servicio,
+                    solicitud.getPrecioAplicado()));
+        }
+    }
+
+    private void agregarRepuestos(OrdenTrabajo orden, Sucursal sucursal, List<OrdenRepuestoRequestDTO> solicitudes) {
+        if (solicitudes == null) {
+            return;
+        }
+        List<OrdenRepuestoRequestDTO> ordenadas = solicitudes.stream()
+                .sorted(Comparator.comparing(OrdenRepuestoRequestDTO::getRepuestoId))
+                .toList();
+        for (OrdenRepuestoRequestDTO solicitud : ordenadas) {
+            Repuesto repuesto = repuestoRepo.findById(solicitud.getRepuestoId())
+                    .orElseThrow(() -> new EntityNotFoundException("Repuesto no encontrado: " + solicitud.getRepuestoId()));
+            Inventario inventario = buscarInventarioParaActualizar(sucursal.getId(), repuesto.getId());
+            if (inventario.getStockTotal() < solicitud.getCantidad()) {
+                throw new StockInsuficienteException("Stock insuficiente para repuesto id: " + repuesto.getId());
+            }
+            inventario.setStockTotal(inventario.getStockTotal() - solicitud.getCantidad());
+            inventario.setFechaActualizacion(LocalDate.now());
+            inventarioRepo.save(inventario);
+            orden.getRepuestos().add(new OrdenRepuesto(
+                    new OrdenRepuestoId(orden.getId(), repuesto.getId()),
+                    orden,
+                    repuesto,
+                    solicitud.getCantidad(),
+                    solicitud.getPrecioAplicado()));
+        }
+    }
+
+    private void cancelarOrden(OrdenTrabajo orden) {
+        if (orden.getEstado() == EstadoOrden.CANCELADA) {
+            return;
+        }
+        if (orden.getEstado() == EstadoOrden.COMPLETADA) {
+            throw new BusinessRuleException("No se puede cancelar una orden completada");
+        }
+        reponerInventario(orden);
+        orden.setEstado(EstadoOrden.CANCELADA);
+    }
+
+    private void reponerInventario(OrdenTrabajo orden) {
+        Sucursal sucursal = orden.getSucursal() != null
+                ? orden.getSucursal()
+                : orden.getMecanico() == null ? null : orden.getMecanico().getSucursal();
+        if (sucursal == null && !orden.getRepuestos().isEmpty()) {
+            throw new BusinessRuleException("La orden no tiene una sucursal asociada para reponer inventario");
+        }
+        List<OrdenRepuesto> ordenados = orden.getRepuestos().stream()
+                .sorted(Comparator.comparing(repuesto -> repuesto.getRepuesto().getId()))
+                .toList();
+        for (OrdenRepuesto ordenRepuesto : ordenados) {
+            Inventario inventario = buscarInventarioParaActualizar(
+                    sucursal.getId(),
+                    ordenRepuesto.getRepuesto().getId());
+            inventario.setStockTotal(inventario.getStockTotal() + ordenRepuesto.getCantidad());
+            inventario.setFechaActualizacion(LocalDate.now());
+            inventarioRepo.save(inventario);
+        }
+    }
+
+    private Inventario buscarInventarioParaActualizar(Integer sucursalId, Integer repuestoId) {
+        return inventarioRepo.findBySucursalIdAndRepuestoIdForUpdate(sucursalId, repuestoId)
+                .orElseThrow(() -> new EntityNotFoundException("Repuesto sin inventario: " + repuestoId));
+    }
+
+    private void validarPendienteAprobacion(OrdenTrabajo orden) {
+        if (orden.getEstado() != EstadoOrden.PENDIENTE_APROBACION) {
+            throw new BusinessRuleException("La orden no esta esperando aprobacion de presupuesto");
+        }
+    }
 
     private void generarFactura(OrdenTrabajo orden) {
-        // Evitar duplicar facturas si ya existe
-        if (orden.getFactura() != null) return;
-
-        BigDecimal subtotal = orden.getServicios().stream()
+        if (facturaRepo.findByOrdenId(orden.getId()).isPresent()) {
+            throw new BusinessRuleException("La orden ya tiene una factura");
+        }
+        BigDecimal subtotalServicios = orden.getServicios().stream()
                 .map(OrdenServicio::getPrecioAplicado)
-                .reduce(BigDecimal.ZERO, BigDecimal::add)
-                .add(orden.getRepuestos().stream()
-                        .map(r -> r.getPrecioAplicado().multiply(BigDecimal.valueOf(r.getCantidad())))
-                        .reduce(BigDecimal.ZERO, BigDecimal::add));
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal subtotalRepuestos = orden.getRepuestos().stream()
+                .map(repuesto -> repuesto.getPrecioAplicado().multiply(BigDecimal.valueOf(repuesto.getCantidad())))
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal subtotal = subtotalServicios.add(subtotalRepuestos).setScale(2, RoundingMode.HALF_UP);
+        BigDecimal impuestos = subtotal.multiply(BigDecimal.valueOf(0.13)).setScale(2, RoundingMode.HALF_UP);
+        facturaRepo.save(new Factura(
+                null,
+                orden,
+                subtotal,
+                impuestos,
+                subtotal.add(impuestos).setScale(2, RoundingMode.HALF_UP),
+                EstadoPago.PENDIENTE,
+                null));
+    }
 
-        BigDecimal impuestos = subtotal.multiply(BigDecimal.valueOf(0.13));
-        Factura f = new Factura(null, orden, subtotal, impuestos, subtotal.add(impuestos), EstadoPago.PENDIENTE, null);
-        facturaRepo.save(f);
+    private void notificarMecanico(OrdenTrabajo orden, String mensaje, String tipo) {
+        if (orden.getMecanico() != null) {
+            notificar(orden.getMecanico().getUsuario().getId(), mensaje, tipo, orden.getId());
+        }
+    }
+
+    private void notificar(Integer usuarioId, String mensaje, String tipo, Integer referenciaId) {
+        notificacionService.crear(usuarioId, mensaje, tipo, referenciaId);
+    }
+
+    private void validarClienteExiste(Integer clienteId) {
+        if (!clienteRepo.existsById(clienteId)) {
+            throw new EntityNotFoundException("Cliente no encontrado: " + clienteId);
+        }
+    }
+
+    private void validarMecanicoExiste(Integer mecanicoId) {
+        if (!mecanicoRepo.existsById(mecanicoId)) {
+            throw new EntityNotFoundException("Mecanico no encontrado: " + mecanicoId);
+        }
+    }
+
+    private String normalizarOpcional(String valor) {
+        return valor == null ? null : valor.trim();
     }
 
     private OrdenTrabajo buscar(Integer id) {
-        return ordenRepo.findById(id)
+        return ordenRepo.findById(id).orElseThrow(() -> new EntityNotFoundException("Orden no encontrada: " + id));
+    }
+
+    private OrdenTrabajo buscarParaActualizar(Integer id) {
+        return ordenRepo.findByIdForUpdate(id)
                 .orElseThrow(() -> new EntityNotFoundException("Orden no encontrada: " + id));
     }
 
-    private OrdenTrabajoResponseDTO toDTO(OrdenTrabajo o) {
-        List<OrdenServicioResponseDTO> servicios = o.getServicios().stream()
-                .map(s -> new OrdenServicioResponseDTO(
-                        s.getServicio().getId(), s.getServicio().getNombre(), s.getPrecioAplicado()))
-                .collect(Collectors.toList());
-
-        List<OrdenRepuestoResponseDTO> repuestos = o.getRepuestos().stream()
-                .map(r -> new OrdenRepuestoResponseDTO(
-                        r.getRepuesto().getId(), r.getRepuesto().getNombre(), r.getCantidad(), r.getPrecioAplicado()))
-                .collect(Collectors.toList());
-
-        String mecanicoNombre = o.getMecanico() != null
-                ? o.getMecanico().getUsuario().getNombre() + " " + o.getMecanico().getUsuario().getApellido()
-                : null;
-        Integer mecanicoId = o.getMecanico() != null ? o.getMecanico().getId() : null;
-        String sucursalNombre = o.getSucursal() != null ? o.getSucursal().getNombre() : null;
-        Integer sucursalId = o.getSucursal() != null ? o.getSucursal().getId() : null;
-
+    private OrdenTrabajoResponseDTO toDTO(OrdenTrabajo orden) {
+        List<OrdenServicioResponseDTO> servicios = orden.getServicios().stream()
+                .map(servicio -> new OrdenServicioResponseDTO(
+                        servicio.getServicio().getId(),
+                        servicio.getServicio().getNombre(),
+                        servicio.getPrecioAplicado()))
+                .toList();
+        List<OrdenRepuestoResponseDTO> repuestos = orden.getRepuestos().stream()
+                .map(repuesto -> new OrdenRepuestoResponseDTO(
+                        repuesto.getRepuesto().getId(),
+                        repuesto.getRepuesto().getNombre(),
+                        repuesto.getCantidad(),
+                        repuesto.getPrecioAplicado()))
+                .toList();
+        String mecanicoNombre = orden.getMecanico() == null
+                ? null
+                : orden.getMecanico().getUsuario().getNombre() + " " + orden.getMecanico().getUsuario().getApellido();
         return new OrdenTrabajoResponseDTO(
-                o.getId(),
-                o.getVehiculo().getPatente(),
-                o.getCliente().getUsuario().getNombre() + " " + o.getCliente().getUsuario().getApellido(),
-                mecanicoNombre, mecanicoId,
-                sucursalNombre, sucursalId,
-                o.getTipoOrden().name(),
-                o.getEstado().name(),
-                o.getFechaCreacion(),
-                o.getFechaFinalizacionEstimada(),
-                o.getComentarios(),
-                o.getPresupuestoTotal(),
-                servicios, repuestos
-        );
+                orden.getId(),
+                orden.getVehiculo().getPatente(),
+                orden.getCliente().getUsuario().getNombre() + " " + orden.getCliente().getUsuario().getApellido(),
+                mecanicoNombre,
+                orden.getMecanico() == null ? null : orden.getMecanico().getId(),
+                orden.getSucursal() == null ? null : orden.getSucursal().getNombre(),
+                orden.getSucursal() == null ? null : orden.getSucursal().getId(),
+                orden.getTipoOrden().name(),
+                orden.getEstado().name(),
+                orden.getFechaCreacion(),
+                orden.getFechaFinalizacionEstimada(),
+                orden.getComentarios(),
+                orden.getPresupuestoTotal(),
+                servicios,
+                repuestos);
     }
 }
